hphp/test/zend/good/ext/mbstring/tests/mb_ereg_replace-compat-01.php.skipif
<?php
extension_loaded('mbstring') or die('skip'); 
function_exists('mb_ereg_replace') or die("skip mb_ereg_replace() is not available in this build");
?>