hphp/test/zend/bad/ext/iconv/tests/iconv_set_encoding_variation.php.skipif
<?php
extension_loaded('iconv') or die('skip');
function_exists('iconv_set_encoding') or die("skip iconv_set_encoding() is not available in this build");
?>